--- a/about.html
+++ b/about.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home page</title>
-    <link
-      rel="icon"
-      href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Tailwind_CSS_Logo.svg/2560px-Tailwind_CSS_Logo.svg.png"
-    />
+    <title>about page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
@@ -15,11 +11,8 @@
   </head>
   <body>
     <header id="navbar"></header>
-
-    <!-- hero section -->
-    <section id="heroSection"></section>
-
-    <script src="index.js"></script>
+    <section id="aboutSection"></section>
+    <script src="main.js"></script>
     <script src="header.js"></script>
   </body>
 </html>
